# toudou

./: .gitignore  .pdm.toml  README.md  deploy.fish  dev.env  pyproject.toml  td.sql  test.csv  toudou.db  work
src/: models.py  toudou.py
src/classes/: todolist.py
src/cli/: create.py  delete.py  export.py  import.py  main.py  new.py  read.py  update.py
src/models/: todolist.py
src/services/: csv.py
src/templates/: home.html  index.html  list.htm  nav.htm  tasks.htm
src/toudou/: __init__.py  common.py  models.py
src/toudou/config/: __init__.py
src/toudou/services/: csv.py
src/toudou/templates/: error.htm  home.htm  list.htm  nav.htm  newlist.htm  tasks.htm
src/toudou/views/: __init__.py  api.py  cli.py  forms.py  web.py
src/views/: cli.py  forms.py  web.py
src/views/static/: custom.css
src/views/templates/: header.htm  home.htm  home.html  index.html  list.htm  nav.htm  newlist.htm  okimport.htm  tasks.htm
