[project]
name = "Toudou"
version = "0.1"
description = "A simple task manager."
readme = "README.md"
dependencies = [
    "click>=8.1.7",
]
requires-python = ">=3.10"
license = { text = "MIT" }


[project.scripts]
toudou = "toudou:cli"


[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

