[project]
name = "Toudou"
version = "0.1"
description = "A simple task manager."
readme = "README.md"
dependencies = [
    "click>=8.1.7",
    "flask>=3.0.2",
    "sqlalchemy>=2.0.27",
    "py8fact>=0.1.1",
]
requires-python = ">=3.10"
license = { text = "MIT" }


[project.scripts]
cli = "toudou:cli"
web = "toudou:app"


[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm]
