[project]
name = "Toudou"
version = "0.1"
description = "A simple task manager."
readme = "README.md"
dependencies = [
    "click>=8.1.7",
    "flask>=3.0.2",
    "sqlalchemy>=2.0.27",
    "py8fact>=0.1.1",
    "flask-wtf>=1.2.1",
    "flask-httpauth>=4.8.0",
    "werkzeug>=3.0.2",
    "spectree>=1.2.9",
]
requires-python = ">=3.10"
license = { text = "Unlicense" }


[project.scripts]
toudou = "toudou:cli"


[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
'_'.env_file = "dev.env"
start = "flask --app toudou --debug run"
